--- a/components/sass/modules/_comments.scss
+++ b/components/sass/modules/_comments.scss
@@ -1,6 +1,6 @@
 .comments {
 
-  margin-top: 3em;
+  margin-top: 0;
   color: #333;
   @include breakpoint($screen $large-minor-start) {
     @include span(last 7 of 8);
